fonts and base route fixes

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,6 +3,6 @@ import Link from "./Link.astro";
 ---
 
 <nav class="font-inconsolata px-8">
-  <Link href="/">About me</Link>
-  <Link href="/projects">Projects</Link>
+  <Link href="/site/">About me</Link>
+  <Link href="/site/projects">Projects</Link>
 </nav>
