--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Nav from "./Nav.astro";
 ---
 
 <header class="flex justify-start items-center h-24 ps-3">
-  <h1 class="font-inconsolata text-primary font-bold tracking-tight text-3xl">
+  <h1 class="font-inconsolata font-bold tracking-tight text-3xl">
     Timofei's Playground
   </h1>
   <Nav />
