--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -5,4 +5,4 @@ export interface Props {
 const { href } = Astro.props;
 ---
 
-<a href={href} class="text-links underline"><slot /></a>
+<a href={href} class="text-links underline dark:text-dark-links"><slot /></a>
