--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,7 +3,7 @@
 ---
 
 <main
-  class="flex flex-col min-h-screen container font-source-code-pro border-t border-b border-accent"
+  class="flex flex-col min-h-screen container font-source-code-pro border-t border-b border-accent dark:border-dark-accent"
 >
   <slot />
 </main>
