--- a/src/pages/demos/index.astro
+++ b/src/pages/demos/index.astro
@@ -5,8 +5,8 @@ import MainLayout from "../../layouts/MainLayout.astro";
 
 <MainLayout title="Projects">
   <div class="flex flex-col mt-4">
-    <Link href="/site/projects/dice">Dice</Link>
-    <Link href="/site/projects/space-invaders">Space invaders</Link>
-    <Link href="/site/projects/login-example">Login example</Link>
+    <Link href="/site/demos/dice">Dice</Link>
+    <Link href="/site/demos/space-invaders">Space invaders</Link>
+    <!-- <Link href="/site/demos/login-example">Login example</Link> -->
   </div>
 </MainLayout>
