--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,5 +4,6 @@ import Link from "./Link.astro";
 
 <nav class="font-inconsolata px-8">
   <Link href="/site/">About me</Link>
-  <Link href="/site/projects">Projects</Link>
+  <Link href="/site/blog">Blog</Link>
+  <Link href="/site/demos">Demos</Link>
 </nav>
