--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -21,7 +21,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-background">
+  <body
+    class="bg-background dark:bg-dark-background text-primary dark:text-dark-primary"
+  >
     <Header />
     <Main>
       <slot />
@@ -29,18 +31,3 @@ const { title } = Astro.props;
     <Footer />
   </body>
 </html>
-
-<style is:global>
-  /* @import "normalize.css";
-
-  html {
-    box-sizing: border-box;
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
-
-  */
-</style>
