--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,10 @@
 
 ---
 
-<footer class="text-center w-full bottom-0 py-4 font-source-code-pro">
-  <p>©2024 Timofei P.</p>
+<footer
+  class="footer sm:footer-horizontal footer-center bg-base-300 text-base-content p-4"
+>
+  <aside>
+    <p>©2024 Timofei P.</p>
+  </aside>
 </footer>
