--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,57 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import Hero from "../components/hero/Hero.astro";
+import Experience from "../components/Experience.astro";
 ---
 
 <MainLayout title="Home">
-  <p class="mt-4">
-    Welcome to my personal site. I'm a Senior Frontend Developer based in Madrid
-    with over ten years of experience crafting single-page applications and
-    traditional websites.
-  </p>
-  <p class="mt-2">
-    <h2 class="font-bold tracking-tight">My skills</h2>
-    <ul>
-      <li>✔ Typescript and Javascript</li>
-      <li>✔ WebGL and Canvas</li>
-      <li>✔ Webpack, Vite, Rollup</li>
-      <li>✔ React, Vue, Svelte</li>
-      <li>✔ CSS-in-JS, PostCSS</li>
-      <li>✔ GraphQL, tRPC, TanStack Query</li>
-      <li>✔ Redux, Mobx, Jotai, Zustand</li>
-      <li>✔ Jest, Playwright, Cypress</li>
-      <li>✔ CI/CD and Docker</li>
-    </ul>
-  </p>
+  <Hero />
+  <div class="container mx-auto p-4">
+    <div class="p-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
+      <div>
+        <h1 class="text-2xl font-bold tracking-tight mb-4">About me</h1>
+        <p>
+          Welcome to my personal site. I'm a Senior Frontend Developer based in
+          Madrid with over ten years of experience crafting single-page
+          applications and traditional websites.
+        </p>
+      </div>
+      <div class="mt-2">
+        <h2 class="text-2xl font-bold tracking-tight mb-4">My skills</h2>
+        <ul>
+          <li>✔ Typescript and Javascript</li>
+          <li>✔ WebGL and Canvas</li>
+          <li>✔ Webpack, Vite, Rollup</li>
+          <li>✔ React, Vue, Svelte</li>
+          <li>✔ CSS-in-JS, PostCSS</li>
+          <li>✔ GraphQL, tRPC, TanStack Query</li>
+          <li>✔ Redux, Mobx, Jotai, Zustand</li>
+          <li>✔ Jest, Playwright, Cypress</li>
+          <li>✔ CI/CD and Docker</li>
+        </ul>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-bold tracking-tight mb-4">Experience</h2>
+      <Experience
+        title="Senior Software Engineer"
+        company="Align Technology"
+        date="September 2019 – October 2024"
+        description="Developed advanced features for orthodontic CAD/CAM in collaboration with a large, international team."
+      />
+      <Experience
+        title="Senior Frontend Developer"
+        company="Everpoint"
+        date="February 2016 – September 2019"
+        description="Promoted to Senior Frontend Developer, leading a team of three in-office developers and two remote team members."
+      />
+      <Experience
+        title="Software Developer"
+        company="Kola Geological Information and Laboratory Center"
+        date="September 2012 – January 2016"
+        description="Developed multiple geographic information systems (GIS) for various clients. Led a team of two developers."
+      />
+    </div>
+  </div>
 </MainLayout>
