--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -4,9 +4,9 @@ import MainLayout from "../../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Projects">
-  <div class="flex flex-col mt-4">
+  <div class="container mx-auto p-4 flex flex-col mt-16">
     <Link href="/site/projects/dice">Dice</Link>
     <Link href="/site/projects/space-invaders">Space invaders</Link>
-    <Link href="/site/projects/login-example">Login example</Link>
+    <!-- <Link href="/site/projects/login-example">Login example</Link> -->
   </div>
 </MainLayout>
