--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,18 +39,21 @@ import Experience from "../components/Experience.astro";
         company="Align Technology"
         date="September 2019 – October 2024"
         description="Developed advanced features for orthodontic CAD/CAM in collaboration with a large, international team."
+        location="Madrid, Moscow, On-Site"
       />
       <Experience
         title="Senior Frontend Developer"
         company="Everpoint"
         date="February 2016 – September 2019"
         description="Promoted to Senior Frontend Developer, leading a team of three in-office developers and two remote team members."
+        location="Moscow, On-Site"
       />
       <Experience
         title="Software Developer"
         company="Kola Geological Information and Laboratory Center"
         date="September 2012 – January 2016"
         description="Developed multiple geographic information systems (GIS) for various clients. Led a team of two developers."
+        location="Murmansk, On-Site"
       />
     </div>
   </div>
