--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,6 @@ import Link from "./Link.astro";
     class="flex w-full items-center justify-center-safe px-8 gap-2 text-2xl text-shadow-md text-shadow-black"
   >
     <Link href="/site/">About me</Link>/
-    <Link href="/site/projects">Projects</Link>
+    <Link href="/site/demos">Demos</Link>
   </nav>
 </header>
