try to fix android shader precision problems

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Link from "./Link.astro";
 ---
 
-<header class="navbar absolute top-0 left-0 flex w-full px-8 py-4">
+<header class="navbar absolute top-0 left-0 flex w-full px-8 py-4 z-10">
   <nav
     class="flex w-full items-center justify-center-safe px-8 gap-2 text-2xl text-shadow-md text-shadow-black"
   >
