--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -5,8 +5,8 @@ import pusaSvg from "./pusa.svg";
 ---
 
 <div class="hero min-h-fit">
-  <Aurora />
-  <div class="flex flex-col items-center justify-center p-2">
+  <Aurora class="h-full w-full z-0" />
+  <div class="flex flex-col items-center justify-center p-2 z-1">
     <Image class="mt-16" src={pusaSvg} alt="" />
     <h1
       class="font-cinzel font-bold tracking-tight lg:text-6xl text-3xl text-shadow-md text-shadow-black"
