--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,8 +1,9 @@
 ---
 export interface Props {
   href: string;
+  class?: string;
 }
-const { href } = Astro.props;
+const { href, class: classNames = "" } = Astro.props;
 ---
 
-<a href={href} class="link link-hover font-cinzel"><slot /></a>
+<a href={href} class={"link link-hover font-cinzel " + classNames}><slot /></a>
